# jatts

./: .gitignore  README.md  setup.cfg
egs/hificaptain_jp_female/tts1/: run.sh
egs/hificaptain_jp_female/tts2/: run.sh  run_e2tts.sh  run_e2tts_multinode.sh
egs/hificaptain_jp_female/tts3/: .d0001934841_nodeinfo  run.sh
egs/jsut/tts1/: run.sh
egs/jsut/tts2/: run.sh
egs/jvs/tts1/: run.sh
egs/jvs/tts2/: path.sh  run.sh
jatts/collaters/: __init__.py  fastspeech2.py  valle.py
jatts/datasets/: __init__.py  tts_dataset.py
jatts/evaluate/: dtw_based.py
jatts/losses/: __init__.py  duration_predictor_loss.py  flow_matching.py  l1l2_loss.py  variance_predictor_loss.py
jatts/models/: __init__.py  e2tts.py  fastspeech2.py  matchatts.py  matchatts_mas.py  valle_ar.py  valle_base.py  valle_nar.py  vits.py
jatts/modules/: duration_predictor.py  utils.py  variance_predictor.py
jatts/modules/conformer/: contextual_block_encoder_layer.py  encoder.py  encoder_layer.py
jatts/modules/e2tts/: modules.py  unett.py
jatts/modules/feature_extract/: dio.py  encodec.py  energy.py  mel.py  spkemb_speechbrain.py
jatts/schedulers/: e2tts_scheduler.py  noam_lr.py
jatts/trainers/: __init__.py  base.py  e2tts.py  fastspeech2.py  matchatts.py  valle.py  vits.py
jatts/utils/: plot.py  prompt.py  signal.py  token_id_converter.py  utils.py
jatts/vocoder/: vocoder.py
tools/: Makefile
utils/: combine_csv.py  data_prep_post_for_test_set.py  data_prep_post_julius.py  generate_accelerate_config.py  julius  prepare_julius.py  run_julius.sh  segment_julius.pl  split_csv.py
(+53 files in other folders)
