[options]
packages = find:
install_requires =
    torch >= 2.5
    librosa >= 0.8.0
    soundfile>=0.10.2
    tensorboardX>=1.8
    matplotlib>=3.1.0
    PyYAML>=3.12
    tqdm>=4.26.1
    kaldiio>=2.14.1
    h5py>=2.9.0
    yq>=2.10.0
    gdown
    filelock
    protobuf<=3.20.1
    parallel-wavegan
    jiwer
    pyworld
    scipy
    pysptk
    transformers
    editdistance
    fastdtw
    espnet-tts-frontend
    nltk
    g2p-en
    jaconv
    pyopenjtalk
    textgrid
    encodec == 0.1.1
    huggingface_hub
    tensorboard == 2.13.0
    torchaudio
    s3prl
    prettytable
    speechbrain
    pandas
    # from matchatts
    conformer
    diffusers
    

[options.entry_points]
console_scripts =
    tts-train = jatts.bin.train:main

[metadata]
name = jatts
version = 0.1.0
author = Wen-Chin Huang
author_email = wen.chinhuang2g.sp.m.is.nagoya-u.ac.jp
description = Japanese text-to-speech (TTS) toolkit for research
keywords = text-to-speech
license = MIT
classifiers =
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
